--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,27 @@
-<div class="center hero-unit">
-	<h1>Welcome to Sample App</h1>
-	<h2>
-		This is home page for the 
-		<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-	  	sample application.
-	</h2>
-	<%= link_to "Sign up now!", signup_path, class:"btn btn-large bnt-primary" %>	
-</div>
-<%= link_to image_tag("rails-logo.svg", alt:"Rails", style:"width:200px"), 'http://rubyonrails.org' %>
-
+<% if signed_in? %>
+	<div class="row">
+		<aside class="span4">
+			<section>
+				<%= render 'shared/user_info' %>
+			</section>
+			<section>
+				<%=  render 'shared/micropost_form' %>
+			</section>
+		</aside>
+		<div class="span8">
+	      <h3>Micropost Feed</h3>
+	      <%= render 'shared/feed' %>
+    	</div>
+	</div>
+<% else %>
+	<div class="center hero-unit">
+		<h1>Welcome to Sample App</h1>
+		<h2>
+			This is home page for the 
+			<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+		  	sample application.
+		</h2>
+		<%= link_to "Sign up now!", signup_path, class:"btn btn-large bnt-primary" %>	
+	</div>
+	<%= link_to image_tag("rails-logo.svg", alt:"Rails", style:"width:200px"), 'http://rubyonrails.org' %>
+<% end %>
